<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aakarshak.explore.ui.about.AboutClassAct">

    <!-- For the Custom Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="@dimen/app_bar_no_elevation">

        <!-- App Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_about" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Content of the Activity -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_background"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/scrollview_about_content_padding">

            <androidx.cardview.widget.CardView
                style="@style/About_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!-- For the background of the App Icon -->
                    <View
                        android:id="@+id/view_about_app_icon_background"
                        style="@style/ConstraintTopCenterHorizontalStyle"
                        android:layout_width="@dimen/match_constraint_0dp"
                        android:layout_height="@dimen/match_constraint_0dp"
                        android:background="@color/ic_launcher_background"
                        app:layout_constraintBottom_toBottomOf="@+id/image_about_app_icon"
                        tools:ignore="MissingConstraints" />

                    <!-- For the App Icon -->
                    <ImageView
                        android:id="@+id/image_about_app_icon"
                        style="@style/ConstraintTopCenterHorizontalStyle"
                        android:layout_width="@dimen/match_constraint_0dp"
                        android:layout_height="@dimen/match_constraint_0dp"
                        app:layout_constraintDimensionRatio="1.6"
                        app:srcCompat="@drawable/rajasthan_pic"
                        tools:ignore="ContentDescription,MissingConstraints"
                        tools:layout_editor_absoluteY="12dp" />

                    <!-- For the Title Text in the content -->
                    <TextView
                        android:id="@+id/text_about_content_title"
                        style="@style/ConstraintCenterHorizontalStyle"
                        android:layout_width="@dimen/match_constraint_0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/card_about_internal_content_margin"
                        android:layout_marginLeft="@dimen/card_about_internal_content_margin"
                        android:layout_marginTop="@dimen/card_about_internal_content_margin"
                        android:layout_marginEnd="@dimen/card_about_internal_content_margin"
                        android:layout_marginRight="@dimen/card_about_internal_content_margin"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/aboutContentTextColor"
                        android:textSize="@dimen/text_about_content_title_size"
                        app:layout_constraintBottom_toTopOf="@+id/text_about_content_intro"
                        app:layout_constraintTop_toBottomOf="@+id/image_about_app_icon"
                        app:layout_constraintVertical_chainStyle="spread_inside"
                        tools:ignore="MissingConstraints" />

                    <!-- For the introductory text -->
                    <TextView
                        android:id="@+id/text_about_content_intro"
                        style="@style/AboutContentTextStyle"
                        app:layout_constraintBottom_toTopOf="@+id/text_about_content_desc"
                        app:layout_constraintEnd_toEndOf="@+id/text_about_content_title"
                        app:layout_constraintLeft_toLeftOf="@+id/text_about_content_title"
                        app:layout_constraintRight_toRightOf="@+id/text_about_content_title"
                        app:layout_constraintStart_toStartOf="@+id/text_about_content_title"
                        app:layout_constraintTop_toBottomOf="@+id/text_about_content_title"
                        tools:text="@string/content_intro" />

                    <!-- For the description text -->
                    <TextView
                        android:id="@+id/text_about_content_desc"
                        style="@style/AboutContentTextStyle"
                        android:textColorLink="@color/aboutContentLinkTextColor"
                        app:layout_constraintBottom_toTopOf="@+id/image_about_github"
                        app:layout_constraintEnd_toEndOf="@+id/text_about_content_intro"
                        app:layout_constraintLeft_toLeftOf="@+id/text_about_content_intro"
                        app:layout_constraintRight_toRightOf="@+id/text_about_content_intro"
                        app:layout_constraintStart_toStartOf="@+id/text_about_content_intro"
                        app:layout_constraintTop_toBottomOf="@+id/text_about_content_intro"
                        tools:text="@string/content_desc" />

                    <!-- ImageView linking to the course -->
                    <ImageView
                        android:id="@+id/image_about_udacity"
                        style="@style/AboutClickableImageViewStyle"
                        android:contentDescription="TODO"
                        app:layout_constraintBottom_toBottomOf="@+id/image_about_github"
                        app:layout_constraintEnd_toStartOf="@+id/image_about_github"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/image_about_github"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/image_about_github"
                        app:srcCompat="@drawable/ic_udacity"
                        tools:ignore="ContentDescription,HardcodedText" />

                    <!-- ImageView linking to the developer's portfolio -->
                    <ImageView
                        android:id="@+id/image_about_github"
                        style="@style/AboutClickableImageViewStyle"
                        android:layout_marginTop="@dimen/card_about_internal_content_margin"
                        android:layout_marginBottom="@dimen/card_about_internal_content_margin"
                        android:contentDescription="TODO"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/image_about_linkedin"
                        app:layout_constraintLeft_toRightOf="@+id/image_about_udacity"
                        app:layout_constraintRight_toLeftOf="@+id/image_about_linkedin"
                        app:layout_constraintStart_toEndOf="@+id/image_about_udacity"
                        app:layout_constraintTop_toBottomOf="@+id/text_about_content_desc"
                        app:srcCompat="@drawable/ic_github"
                        tools:ignore="ContentDescription,HardcodedText" />

                    <!-- ImageView linking to the developer's bio -->
                    <ImageView
                        android:id="@+id/image_about_linkedin"
                        style="@style/AboutClickableImageViewStyle"
                        app:layout_constraintBottom_toBottomOf="@+id/image_about_github"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/image_about_github"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/image_about_github"
                        app:layout_constraintTop_toTopOf="@+id/image_about_github"
                        app:srcCompat="@drawable/ic_linkedin"
                        tools:ignore="ContentDescription" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>